--- a/public/html/client.html
+++ b/public/html/client.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <title></title>
+    <title>Chat</title>
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
@@ -22,11 +22,9 @@
       </div>
 
       <div class="text_support">
-        <script id="email-template" type="text/template">
+        <script id="message-user-template" type="text/template">
           <div class="client">
             <span class="name">{{email}}</span>
-        </script>
-        <script id="message-user-template" type="text/template">
             <span class="client message">
               {{message}}
               <!-- <label class="date">{{date}}</label> -->
@@ -102,14 +100,14 @@
     const chat = document.getElementById("chat_help");
 
     function onLoad() {
-      // fetch("http://localhost:3333/settings/admin").then((result) =>
-      //   result.json().then((response) => {
-      //     const buttonSupport = document.getElementById("btn_support");
-      //     if (!response.chat) {
-      //       buttonSupport.style.display = "none";
-      //     }
-      //   })
-      // );
+      fetch("http://localhost:3333/settings/admin").then((result) =>
+        result.json().then((response) => {
+          const buttonSupport = document.getElementById("btn_support");
+          if (!response.chat) {
+            buttonSupport.style.display = "none";
+          }
+        })
+      );
     }
 
     function openChat() {
